UI overlap issues

--- a/public/css/common-style.css
+++ b/public/css/common-style.css
@@ -4714,8 +4714,8 @@ button.dropbtn {
     display: flex;
     }
     .all-data-wrapper .global-container-hold .left-container-wider {
-    min-width: 63%;
-    width: 63%;
+    min-width: 72%;
+    width: 72%;
     }
  
     .travel-type-hold {
@@ -5304,8 +5304,8 @@ ul.summary-list li span {
         display: flex;
         }
         .all-data-wrapper .global-container-hold .left-container-wider {
-        min-width: 63%;
-        width: 63%;
+        min-width: 72%;
+        width: 72%;
         }
         .all-data-wrapper .global-container-hold .right-container-nrw {
         min-width: 25%;
@@ -6724,7 +6724,7 @@ ul.summary-list li span {
         margin: 0 auto;
         top: 47%;
         outline: 3px solid #FFF;
-          box-shadow: 0px 0px 1px 5px #555555;  
+        /* box-shadow: 0px 0px 1px 5px #555555; */
         }
         .time-frame-wrapper .time-log-axis .tfl-child:after {
         content: '';
@@ -9636,9 +9636,14 @@ body.sidebar-mini.sidebar-collapse .left-container-wider {
         width: 75% !important;
         }
         body.sidebar-mini .left-container-wider {
-        min-width: 63% !important;
+        min-width:63% !important;
         width: 63% !important;
         }
+
+                body.sidebar-mini .left-container-wider .expense-tab-sec .mdc-tab {
+	min-width: 115px!important;
+}
+
         h5.heading-h5-sub {
         color: #2d83c8;
         font-size: 15px;
