--- a/src/app/feature/expense/main-expense/main-expense.component.scss
+++ b/src/app/feature/expense/main-expense/main-expense.component.scss
@@ -153,7 +153,7 @@ min-width: 153px;
 
 	.mat-mdc-tab-label-container {
 
-		border: none;
+		border: none;z-index: inherit;
 	}
 
 	.mat-mdc-form-field-textarea-control {
